# WeChat-ClaudeCode-MCP

./: .gitignore  README.md  decrypt_db.py  export_messages.py  find_key_windows.py  mcp_server.py  poll_messages.py  pyproject.toml  requirements.txt  verify_keys.py
.claude/skills/wechat-mcp/: SKILL.md
wechat_mcp/: __init__.py  chat.py  config.py  decrypt.py  export.py  keygen.py  keygen_windows.py  poll.py  server.py  setup.py  verify.py
